--- a/app/src/main/res/layout/fragment_poetry_detail.xml
+++ b/app/src/main/res/layout/fragment_poetry_detail.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.modul5.ui.PoetryViewModel" />
+            type="com.example.poemy.ui.poetry.PoetryViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
