--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,4 +22,22 @@
             android:id="@+id/action_poetryDetailFragment_to_poetryListFragment"
             app:destination="@id/poetryListFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/poetryListFragment1"
+        android:name="com.example.poemy.ui.poetry1.PoetryListFragment1"
+        android:label="PoetryListFragment1" >
+        <action
+            android:id="@+id/action_poetryListFragment1_to_poetryDetailFragment1"
+            app:destination="@id/poetryDetailFragment1" />
+    </fragment>
+    <fragment
+        android:id="@+id/poetryDetailFragment1"
+        android:name="com.example.poemy.ui.poetry1.PoetryDetailFragment1"
+        android:label="PoetryDetailFragment1"
+        tools:layout="@layout/fragment_poetry_detail">
+        <action
+            android:id="@+id/action_poetryListFragment1_to_poetryDetailFragment1"
+            app:destination="@id/poetryListFragment1" />
+    </fragment>
+
 </navigation>
