--- a/app/src/main/res/layout/list_view_item2.xml
+++ b/app/src/main/res/layout/list_view_item2.xml
@@ -30,7 +30,7 @@
             android:fontFamily="sans-serif-condensed"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="18sp"
-            android:text="@{poetry1.title}"
+            android:text="@{poetry1.title1}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Lorem Ipsum" />
