--- a/app/src/main/res/layout/fragment_poetry1_detail.xml
+++ b/app/src/main/res/layout/fragment_poetry1_detail.xml
@@ -15,75 +15,76 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/title1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="@{ viewModel.poem1.title}"
+            android:text="@{ viewModel.poem1.title1}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="The Lost Friend" />
 
         <TextView
-            android:id="@+id/author"
+            android:id="@+id/author1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="@{viewModel.poem1.author}"
+            android:text="@{viewModel.poem1.author1}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintTop_toBottomOf="@+id/title1"
             tools:text="@tools:sample/full_names" />
 
         <View
-            android:id="@+id/view"
+            android:id="@+id/view1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginStart="8dp"
             android:background="?attr/dividerHorizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/author" />
+            app:layout_constraintTop_toBottomOf="@id/author1" />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view">
+            app:layout_constraintTop_toBottomOf="@+id/view1">
 
 
             <TextView
-                android:id="@+id/lines"
+                android:id="@+id/lines1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
                 android:fontFamily="sans-serif-condensed-medium"
 
-                android:text="@{viewModel.listToString(viewModel.poem1.lines)}"
+                android:text="@{viewModel.listToString(viewModel.poem1.lines1)}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                app:layout_constraintTop_toTopOf="@+id/view"
-                tools:text="The people take the thing of course,\n
-They marvel not to see\n
-This strange, unnatural divorce\n
-Betwixt delight and me.\n
-\n
-I know the face of sorrow, and I know\n
-Her voice with all its varied cadences;\n
-Which way she turns and treads; how at her ease\n
-Things fit her dreary largess to bestow.\n
-\n
-Where sorrow long abides, some be that grow\n
-To hold her dear, but I am not of these;\n
-Joy is my friend, not sorrow; by strange seas\n
-In some far land we wandered, long ago.\n
-\n
-O faith, long tried, that knows no faltering!\n
-O vanished treasure of her hands and face!--\n
-Beloved--to whose memory I cling,\n
-Unmoved within my heart she holds her place.\n
-\n
-And never shall I hail that other\n
-Who yet shall dog my footsteps to the end" />
+                app:layout_constraintTop_toTopOf="@+id/view1"
+                tools:text="
+                The people take the thing of course,\n
+                They marvel not to see\n
+                This strange, unnatural divorce\n
+                Betwixt delight and me.\n
+                \n
+                I know the face of sorrow, and I know\n
+                Her voice with all its varied cadences;\n
+                Which way she turns and treads; how at her ease\n
+                Things fit her dreary largess to bestow.\n
+                \n
+                Where sorrow long abides, some be that grow\n
+                To hold her dear, but I am not of these;\n
+                Joy is my friend, not sorrow; by strange seas\n
+                In some far land we wandered, long ago.\n
+                \n
+                O faith, long tried, that knows no faltering!\n
+                O vanished treasure of her hands and face!--\n
+                Beloved--to whose memory I cling,\n
+                Unmoved within my heart she holds her place.\n
+                \n
+                And never shall I hail that other\n
+                Who yet shall dog my footsteps to the end" />
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
