--- a/app/src/main/res/layout/fragment_poetry1_detail.xml
+++ b/app/src/main/res/layout/fragment_poetry1_detail.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="@{ viewModel.poem1.title1}"
+            android:text="@{ viewModel.poem1.title}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="@{viewModel.poem1.author1}"
+            android:text="@{viewModel.poem1.author}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title1"
@@ -59,7 +59,7 @@
                 android:padding="4dp"
                 android:fontFamily="sans-serif-condensed-medium"
 
-                android:text="@{viewModel.listToString(viewModel.poem1.lines1)}"
+                android:text="@{viewModel.listToString(viewModel.poem1.lines)}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                 app:layout_constraintTop_toTopOf="@+id/view1"
                 tools:text="
